css/styles.css
body {
    background-color: #eeeded;
}
table { 
    margin-bottom: 0 !important;
}
.timeline>table {
    border: 0 !important;
}
    
.timeline th {
    margin: 0;
}
.timeline th, .timeline td {
    padding: 0 !important;
}
td.row-timeline {
    background-image: url(../images/timeline.gif); 
}

td.row-heading {
    width: 30%;
}
th.row-timeline-heading, td.row-timeline {
    width: 70%;
}

.top-margin-60 {
    margin-top: 60px;
}
.code-container {
    max-height: 400px;
    width: 100%;
    padding: 15px;
    font-family: 'Consolas';
    overflow-y: scroll;
}

.align-right {
    text-align: right;
}

.timeline-date {
    width: 30px;
    text-align: center;
    float: left;
    padding: 5px 0;
    font-size: 1.4em;
}

.timeline-day {
    font-size: 0.8em;
    display: block;
    font-variant: small-caps;
}

.home,
.home-name {
    padding: 8px;
    font-size: 1.4em;
}

td .home:after {
    content: "";
    float: right;
    background: url("../images/ic_expand_more_white_24dp_1x.png") no-repeat top right;
    width: 24px;
    height: 24px;
}

tr.expand td .home:after,
tr.expand .label-container:after {
    background: url("../images/ic_expand_less_white_24dp_1x.png") no-repeat top right;
}

th .home:after {
    content: "";
    float: right;
    background: url("../images/ic_expand_more_white_24dp_1x.png") no-repeat top right;
    width: 24px;
    height: 24px;
}

tr.expand th .home:after {
    background: url("../images/ic_expand_less_white_24dp_1x.png") no-repeat top right;
}

.bed {
    display: none;
    position: absolute;
    min-height: 36px;
    padding: 0;
}

.bed-label {
    display: none;
}

tr.expand .bed-label {
    display: block;
    padding: 8px;
}

tr.expand .bed {
    position: relative;
    display: block;
    margin-bottom: 1px;
}

.bookings-container {
    position: relative;
}

.booking {
    position: absolute;
    text-align: center;
    padding: 8px;
    margin-bottom: 1px;
    overflow: hidden;
    white-space: nowrap;
    text-overflow:ellipsis; 
    height: 36px;
}

td.row-heading .home:hover, .booking:hover, .bookings-container .bed:hover {
    cursor: pointer;
}

.booking.booked {
    background-color: #E53935;
    color: white;
}

.booking.requested {
    background-color: #FFB74D;    
    color: #222;
}

.booking.in-use {
    background-color: #424242;
    color: white;
}

.hover {
    background-color: #fbe9e7;
    background-image: url(../images/timeline-hover.gif);
}

.nav-btn .btn {
    box-shadow: none;
    -webkit-transition: 0.1s ease-out;
    -moz-transition: 0.1s ease-out;
    -o-transition: 0.1s ease-out;
    -ms-transition: 0.1s ease-out;
    transition: 0.1s ease-out;
}
.btn-advance,
.btn-back {
    min-height: 24px;
}

.btn-advance, .btn-advance:active {
    background: url("../images/ic_keyboard_arrow_right_white_24dp_2x.png") no-repeat center;
    margin-right: 0;
}
.btn-advance:hover {
    background-position: -8px center
}
.btn-advance:active {
    background-position: -5px center
}


.btn-back, .btn-back:active {
    background: url("../images/ic_keyboard_arrow_left_white_24dp_2x.png") no-repeat center;
    margin-left: 0
}
.btn-back:hover {
    background-position: -13px center
}
.btn-back:active {
    background-position: -16px center
}
.centre {
    text-align: center;

}

.vacancy {
    display: inline-block;
    width: 30px;
    text-align: center;
    min-height: 36px;
    padding: 8px;
    font-size: 1.4em;
}
.vacancy-none {
    background-color: #434A54;
    color: white;
}

/** kv **/
/* month marker */
.timeline-date.first {position: relative;}

.timeline-date.first .month {
    color: #fff;
    font-size: 0.8em;
    left: -1.3em;
    line-height: 0.8em;
    padding: 0.2em;
    position: absolute;
    top: -1.6em;
}

/* Timeline widget */

.timeline>table {font-size: 0.7em;}

.timeline-nav .wrapper h2 {
    position: absolute;
    display: inline-block;
    padding:  0;
    top: 12px;
    left: 0;
    right: 0;
    margin: 0 auto;
    font-size: 1.25rem;
     /*  padding: 0.2em 0em 3.5em 0em;*/

}

.timeline-nav .wrapper {
    position: relative;
    overflow: hidden;
    padding: 8px
}


.timeline-nav .btn-back{
    float:left;
    position: relative;
     z-index: 500;
     line-height: 0.5em;

}

.timeline-nav .btn-advance {
   float:right; 
   position: relative;
   z-index: 500;
   line-height: 0.5em;
}

.timeline-nav .btn-advance,.timeline-nav .btn-back {
    margin: 0.2em 0;
    padding: 5px 12px;
}


@media only screen and (min-device-width: 320px) {
/* Styles */
}

@media only screen and (min-width: 768px) {
/* Styles */

    .timeline-nav .wrapper h2 {
        font-size: 1.6rem;
        top:16px
    }
    .home,
    .home-name,
    .vacancy,
    .timeline-date {
        font-size: 1em;
    }

    /*.timeline-nav .btn-advance,
    .timeline-nav .btn-advance {
        line-height: 1.4em;
    }*/
    .timeline>table {font-size: 1em;}

    .timeline-nav .wrapper {
         padding: 16px;
         min-height: 30px;
    }
}

@media only screen and (min-width: 992px) { 

    .timeline-nav .wrapper {
         padding: 20px 16px;
    }

    .timeline-nav .wrapper h2 {
        font-size: 1.9rem;
        top:18px
    }
    /* Reduce ratio of column heading width */
    td.row-heading {
        width: 20%;
    }
    
    th.row-timeline-heading, td.row-timeline {
        width: 80%;
    } 

}

